; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_wl_init.c_dataDeviceHandleDataOffer.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_wl_init.c_dataDeviceHandleDataOffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.wl_data_offer* }
%struct.wl_data_offer = type { i32 }
%struct.wl_data_device = type { i32 }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@dataOfferListener = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_data_device*, %struct.wl_data_offer*)* @dataDeviceHandleDataOffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dataDeviceHandleDataOffer(i8* %0, %struct.wl_data_device* %1, %struct.wl_data_offer* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wl_data_device*, align 8
  %6 = alloca %struct.wl_data_offer*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.wl_data_device* %1, %struct.wl_data_device** %5, align 8
  store %struct.wl_data_offer* %2, %struct.wl_data_offer** %6, align 8
  %7 = load %struct.wl_data_offer*, %struct.wl_data_offer** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %8 = icmp ne %struct.wl_data_offer* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load %struct.wl_data_offer*, %struct.wl_data_offer** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %11 = call i32 @wl_data_offer_destroy(%struct.wl_data_offer* %10)
  br label %12

12:                                               ; preds = %9, %3
  %13 = load %struct.wl_data_offer*, %struct.wl_data_offer** %6, align 8
  store %struct.wl_data_offer* %13, %struct.wl_data_offer** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %14 = load %struct.wl_data_offer*, %struct.wl_data_offer** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %15 = call i32 @wl_data_offer_add_listener(%struct.wl_data_offer* %14, i32* @dataOfferListener, i32* null)
  ret void
}

declare dso_local i32 @wl_data_offer_destroy(%struct.wl_data_offer*) #1

declare dso_local i32 @wl_data_offer_add_listener(%struct.wl_data_offer*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
